objects/vlocity_ins__VlocityStateTransition__c.object
<CustomObject>
    <description>A state transition allowed within a given version of a Vlocity State Model. Master-detail child object of Vlocity State Model Version.</description>
    <fields>
        <fullName>vlocity_ins__Alternate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate</label>
        <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition (Alternate)</relationshipLabel>
        <relationshipName>StateTransitionAlternateStates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition</relationshipLabel>
        <relationshipName>VlocityStateTransition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefaultTransition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the checkbox to indicate if the ToState is the default transition from the FromState</description>
        <label>Default Transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelVersionId__c</fullName>
        <label>Vlocity State Model Version</label>
        <referenceTo>vlocity_ins__VlocityStateModelVersion__c</referenceTo>
        <relationshipLabel>Vlocity State Transition</relationshipLabel>
        <relationshipName>Vlocity_State_Transition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition (To)</relationshipLabel>
        <relationshipName>ToState</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransitionCompletionCriteria__c</fullName>
        <description>This field is to determine when the state transition happens. For example, when the mode is set to AllTrue, the transition is effected only when all rules defined for the transition pass.</description>
        <label>State Transition Completion Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AllTrue</fullName>
                    <label>All True</label>
                </value>
                <value>
                    <fullName>AnyTrue</fullName>
                    <default>true</default>
                    <label>Any True</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity State Transition</label>
    <nameField>
        <label>Vlocity State Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__FromStateShouldBeOnTheSameModel</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(vlocity_ins__From__c)) &amp;&amp; vlocity_ins__From__r.vlocity_ins__StateModelId__c != vlocity_ins__StateModelVersionId__r.vlocity_ins__StateModelId__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__From__c</errorDisplayField>
        <errorMessage>Selected State belongs to a different State Model. Please choose a State from the current State Model.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__ToStateShouldBeOnTheSameModel</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(vlocity_ins__To__c)) &amp;&amp; vlocity_ins__To__r.vlocity_ins__StateModelId__c != vlocity_ins__StateModelVersionId__r.vlocity_ins__StateModelId__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__To__c</errorDisplayField>
        <errorMessage>Selected State belongs to a different State Model. Please choose a State from the current State Model.</errorMessage>
    </validationRules>
</CustomObject>